--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ plugins {
     id 'idea'
 
     id 'org.openrewrite.rewrite' version '6.15.1'
+
+    id 'org.sonarqube' version '4.4.1.3373'
 }
 
 // Enable following for debugging
@@ -40,6 +42,14 @@ apply from: 'eclipse.gradle'
 
 group = "org.jabref"
 version = project.findProperty('projVersion') ?: '100.0.0'
+
+sonar {
+  properties {
+    property "sonar.projectKey", "MyProject-2_def-guide-to-netbeans-platform-7"
+    property "sonar.organization", "myproject-2"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
 
 java {
     sourceCompatibility = JavaVersion.VERSION_21
@@ -58,6 +68,7 @@ java {
         // vendor = JvmVendorSpec.AMAZON
     }
 }
+
 
 application {
     mainClass.set('org.jabref.Launcher')
